[Plugins/games] Fix header behavior on uneven nicks
Realizing a proper left-middle-right layout with shrinkable sides is
nontrivial, so we just center the scores at the cost of potentially
wasting space instead.

--- a/src/games/static/games/games.css
+++ b/src/games/static/games/games.css
@@ -72,15 +72,16 @@
   padding-bottom: 2px;
 }
 .player-header {
+  -webkit-flex-basis: 0;
   -webkit-flex-grow: 1;
+  flex-basis: 0;
   flex-grow: 1;
-  min-width: 25%;
+  min-width: 0;
 }
 .game-header .nick {
   white-space: pre;
   overflow: hidden;
   text-overflow: ellipsis;
-  min-width: 0;
 }
 .game-header .score {
   font-weight: bold;
